Finished some updates
Such as adding link to the portfolio project work images and adding images to the work project sections

--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ section {
     margin: 20px;
 }
 
+.project_image {
+    width: 150px;
+    height: 200px;
+    margin-bottom: 10px;
+}
+
 .project {
     width: 200px;
     /*Square dimensions*/
@@ -35,6 +41,8 @@ section {
 h1, h2 {
     color: #333;
 }
+
+
 
 #bio, #work {
     background-color: #e9e9e9;
